# cmeta

./: CMakeLists.txt  README.md  cmetaprog.kdev4  compiler.h  copytest.c  cptests.c  cptests.sh  glibc_qsort.c  qsort.c  qsort.h  qsort_test.c  run_tests.sh  static_strlen.c  utils.h
